samples/_failures_safe/1761344662_f2b486_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bb871ab0.c: In function ‘main’:
./samples/SAFE/__tmp_bb871ab0.c:180:25: error: missing terminating " character
  180 |         fprintf(stderr, "Error reading
      |                         ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_bb871ab0.c:180:9: error: expected expression at end of input
  180 |         fprintf(stderr, "Error reading
      |         ^~~~~~~
./samples/SAFE/__tmp_bb871ab0.c:180:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bb871ab0.c:180:9: error: expected declaration or statement at end of input
